cmake_minimum_required(VERSION 3.17)
project(Projekt_ZOO)

set(CMAKE_CXX_STANDARD 14)

add_executable(Projekt_ZOO main.cpp Hrdina.cpp Hrdina.h Mapa.cpp Mapa.h Lokace.cpp Lokace.h Nepritel.cpp Nepritel.h Predmet.cpp Predmet.h Hra.cpp Hra.h Inventar.cpp Inventar.h UnikatniPredmet.cpp UnikatniPredmet.h Klic.cpp Klic.h Dvere.cpp Dvere.h)